# brownfield-cartographer

./: .env.example  .gitignore  INTERIM_REPORT.md  README.md  RECONNAISSANCE.md  prompts.md  pyproject.toml
.cartography/: CODEBASE.md  cartography_trace.jsonl  lineage_graph.html  lineage_graph.json  manifest.json  module_graph.html  module_graph.json  onboarding_brief.md
cartography/: CODEBASE.md  cartography_trace.jsonl  lineage_graph.html  lineage_graph.json  manifest.json  module_graph.html  module_graph.json  onboarding_brief.md
docs/: CARTOGRAPHER_FINAL_REPORT.md
specs/: 00-project-goal.md  01-system-architecture.md  02-repository-structure.md  03-knowledge-graph-schema.md  04-implementation-roadmap.md  05-repository-ingestion.md  06-surveyor-agent.md  07-hydrologist-agent.md  08-archivist-agent.md  09-pyvis-visualization.md  10-cli-and-orchestrator.md  11-semanticist-agent.md  12-navigator-agent.md  13-incremental-update-mode.md  14-testing-and-fixtures.md  15-architectural-report.md
src/: cli.py  incremental.py  orchestrator.py
src/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: dag_config_parser.py  git_velocity.py  ingestion_detector.py  language_router.py  notebook_parser.py  python_dataflow.py  sql_lineage.py  tree_sitter_analyzer.py
src/brownfield_cartographer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/graph/: __init__.py  knowledge_graph.py  serializers.py  visualization.py
src/llm/: __init__.py  budget.py  embeddings.py  prompts.py  (+2 more)
tests/: README.md
(+54 files in other folders)
