[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brownfield-cartographer"
version = "0.1.0"
description = "Repository ingestion layer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "networkx>=3.0",
  "tree-sitter>=0.20",
  "tree-sitter-python>=0.20",
  "sqlglot>=20.0",
  "pyyaml>=6.0",
  "nbformat>=5.0",
  "pyvis>=0.3",
]

[project.scripts]
cartographer = "cli:main"

[dependency-groups]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
  "integration: integration tests (fixture repos, no network)",
  "smoke: smoke tests (may use network or external targets)",
]

